k8s-deployment/redis-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master
  namespace: sk-todo-app
  labels:
    app: redis-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-master
  template:
    metadata:
      name: redis-master
      namespace: sk-todo-app
      labels:
        app: redis-master
    spec:
      containers:
        - name: "redis-master"
          image: "johscheuer/redis-master:v2"
          resources:
            limits:
              cpu: 100m
            requests:
              cpu: 100m
          ports:
            - containerPort: 6379
              protocol: "TCP"
