k8s-deployment/redis-slave-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-slave
  namespace: sk-todo-app
  labels:
    app: redis-slave
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis-slave
  template:
    metadata:
      name: redis-slave
      namespace: sk-todo-app
      labels:
        app: redis-slave
    spec:
      containers:
        - name: "slave"
          image: "johscheuer/redis-slave:v2"
          resources:
            limits:
              cpu: 100m
            requests:
              cpu: 100m
          ports:
            - containerPort: 6379
              protocol: "TCP"
