k8s-deployment/redis-master-service.yaml
kind: "Service"
apiVersion: "v1"
metadata:
  name: "redis-master"
  namespace: sk-todo-app
  labels:
    app: "redis-master"
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: "TCP"
  selector:
    app: "redis-master"
