k8s-deployment/redis-slave-service.yaml
kind: "Service"
apiVersion: "v1"
metadata:
  name: "redis-slave"
  namespace: sk-todo-app
  labels:
    app: "redis-slave"
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: "TCP"
  selector:
    app: "redis-slave"
